# vtt

./: .dockerignore  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.multi-validator.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
bridge-evm/: README.md  foundry.toml
bridge-evm/broadcast/Deploy.s.sol/11155111/: run-latest.json
bridge-evm/broadcast/Deploy.s.sol/84532/: run-latest.json
bridge-evm/cache/: solidity-files-cache.json
bridge-evm/cache/Deploy.s.sol/11155111/: run-latest.json
bridge-evm/deployments/: base-sepolia.json
bridge-evm/script/: Deploy.s.sol  DeployLiquidityWVTT_ETH.s.sol  DeployLiquidityWVTT_USDT.s.sol
bridge-evm/src/: VTTBridge.sol  WVTT.sol
bridge-evm/test/: Bridge.t.sol
contracts/compliance-open/: Cargo.toml
contracts/compliance-open/src/: lib.rs
contracts/compliance-regd/: Cargo.toml
contracts/compliance-regd/src/: lib.rs
contracts/equity-token/: Cargo.toml
contracts/equity-token/src/: lib.rs
contracts/real-estate-token/: Cargo.toml
contracts/real-estate-token/src/: lib.rs
crates/vtt-chain/: Cargo.toml
crates/vtt-chain/src/: lib.rs
crates/vtt-compliance/: Cargo.toml
crates/vtt-compliance/src/: chain_policy.rs  identity.rs  lib.rs
crates/vtt-consensus/: Cargo.toml
crates/vtt-consensus/src/: engine.rs  finality.rs  governance.rs  lib.rs  rewards.rs  slashing.rs  validator.rs
crates/vtt-crypto/: Cargo.toml
crates/vtt-crypto/src/: hash.rs  keys.rs  lib.rs
crates/vtt-dex/: Cargo.toml
crates/vtt-dex/src/: error.rs  lib.rs  liquidity.rs  math.rs  mining.rs  pool.rs  revenue.rs  swap.rs
crates/vtt-executor/: Cargo.toml
crates/vtt-executor/src/: lib.rs
crates/vtt-genesis/: Cargo.toml
crates/vtt-genesis/src/: lib.rs
crates/vtt-multichain/: Cargo.toml
crates/vtt-multichain/src/: lib.rs  messaging.rs  registry.rs  shared_security.rs
crates/vtt-network/: Cargo.toml
crates/vtt-network/src/: config.rs  lib.rs  messages.rs  service.rs
crates/vtt-primitives/: Cargo.toml
crates/vtt-primitives/src/: amount.rs  asset_governance.rs  block.rs  chain.rs  lib.rs  transaction.rs
crates/vtt-rpc/: Cargo.toml
crates/vtt-rpc/src/: lib.rs  server.rs  types.rs
crates/vtt-state/: Cargo.toml
crates/vtt-state/src/: account.rs  asset.rs  lib.rs  oracle.rs  statedb.rs  trie.rs
crates/vtt-storage/: Cargo.toml
crates/vtt-storage/src/: lib.rs  memory.rs  rocks.rs
crates/vtt-telemetry/: Cargo.toml
crates/vtt-telemetry/src/: lib.rs
crates/vtt-txpool/: Cargo.toml
crates/vtt-txpool/src/: lib.rs
crates/vtt-vm/: Cargo.toml
crates/vtt-vm/src/: context.rs  engine.rs  error.rs  gas.rs  lib.rs
docs/: validator-guide.md  vtt-architecture.drawio
docs/superpowers/plans/: 2026-03-30-vtt-dex-amm.md  2026-04-10-production-hardening.md
docs/superpowers/specs/: 2026-03-30-vtt-dex-amm.md
tests/integration/: Cargo.toml  chain_lifecycle.rs
