[workspace]
members = [
    "crates/vtt-primitives",
    "crates/vtt-crypto",
    "crates/vtt-storage",
    "crates/vtt-state",
    "crates/vtt-txpool",
    "crates/vtt-consensus",
    "crates/vtt-executor",
    "crates/vtt-vm",
    "crates/vtt-network",
    "crates/vtt-chain",
    "crates/vtt-multichain",
    "crates/vtt-compliance",
    "crates/vtt-dex",
    "crates/vtt-rpc",
    "crates/vtt-genesis",
    "crates/vtt-telemetry",
    "bin/vtt-node",
    "bin/vtt-validator",
    "bin/vtt-cli",
    "bin/vtt-relayer",
    "tests/integration",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Alessandro Vettor"]
license = "MIT"
repository = "https://github.com/alessandrovettor/vtt"

[workspace.dependencies]
# Core
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
borsh = { version = "1", features = ["derive"] }
thiserror = "2"
anyhow = "1"

# Crypto
blake3 = "1"
ed25519-dalek = { version = "2", features = ["serde", "rand_core"] }
rand = "0.8"

# Storage
rocksdb = "0.22"

# Networking
libp2p = { version = "0.54", features = ["tcp", "noise", "yamux", "gossipsub", "kad", "request-response", "tokio", "macros"] }

# RPC
jsonrpsee = { version = "0.24", features = ["server", "client", "macros", "http-client"] }
tower = "0.4"
tower-http = { version = "0.6", features = ["cors", "limit"] }

# Telemetry
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
prometheus = "0.13"

# VM
wasmer = "5"

# Internal crates
vtt-primitives = { path = "crates/vtt-primitives" }
vtt-crypto = { path = "crates/vtt-crypto" }
vtt-storage = { path = "crates/vtt-storage" }
vtt-state = { path = "crates/vtt-state" }
vtt-txpool = { path = "crates/vtt-txpool" }
vtt-consensus = { path = "crates/vtt-consensus" }
vtt-executor = { path = "crates/vtt-executor" }
vtt-vm = { path = "crates/vtt-vm" }
vtt-network = { path = "crates/vtt-network" }
vtt-chain = { path = "crates/vtt-chain" }
vtt-multichain = { path = "crates/vtt-multichain" }
vtt-compliance = { path = "crates/vtt-compliance" }
vtt-dex = { path = "crates/vtt-dex" }
vtt-rpc = { path = "crates/vtt-rpc" }
vtt-genesis = { path = "crates/vtt-genesis" }
vtt-telemetry = { path = "crates/vtt-telemetry" }
