[package]
name = "vtt-chain"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Block import pipeline and chain management for VTT blockchain"

[dependencies]
vtt-primitives = { workspace = true }
vtt-crypto = { workspace = true }
vtt-state = { workspace = true }
vtt-consensus = { workspace = true }
vtt-executor = { workspace = true }
vtt-storage = { workspace = true }
borsh = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
