[package]
name = "vtt-consensus"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "DPoS consensus engine for VTT blockchain"

[dependencies]
vtt-primitives = { workspace = true }
vtt-crypto = { workspace = true }
vtt-state = { workspace = true }
borsh = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
