[package]
name = "vtt-executor"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Transaction execution engine for VTT blockchain"

[dependencies]
vtt-primitives = { workspace = true }
vtt-crypto = { workspace = true }
vtt-state = { workspace = true }
vtt-consensus = { workspace = true }
vtt-vm = { workspace = true }
borsh = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
vtt-dex = { path = "../vtt-dex" }

[dev-dependencies]
vtt-storage = { workspace = true }
