[package]
name = "vtt-genesis"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Genesis block construction for VTT blockchain"

[dependencies]
vtt-primitives = { workspace = true }
vtt-crypto = { workspace = true }
vtt-state = { workspace = true }
borsh = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
