[package]
name = "vtt-multichain"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Multichain orchestration for VTT: relay chain, app chains, cross-chain messaging"

[dependencies]
vtt-primitives = { workspace = true }
vtt-crypto = { workspace = true }
vtt-compliance = { workspace = true }
borsh = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
