[package]
name = "vtt-network"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "P2P networking layer for VTT blockchain using libp2p"

[dependencies]
vtt-primitives = { workspace = true }
vtt-crypto = { workspace = true }
libp2p = { workspace = true }
tokio = { workspace = true }
borsh = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
