[package]
name = "vtt-rpc"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "JSON-RPC server for VTT blockchain"

[dependencies]
vtt-primitives = { workspace = true }
vtt-crypto = { workspace = true }
vtt-chain = { workspace = true }
vtt-txpool = { workspace = true }
jsonrpsee = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
vtt-consensus = { workspace = true }
vtt-genesis = { workspace = true }
vtt-state = { workspace = true }
