[package]
name = "vtt-rpc"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "JSON-RPC server for VTT blockchain"

[dependencies]
vtt-primitives = { workspace = true }
vtt-crypto = { workspace = true }
vtt-chain = { workspace = true }
vtt-state = { workspace = true }
vtt-dex = { path = "../vtt-dex" }
vtt-txpool = { workspace = true }
vtt-telemetry = { path = "../vtt-telemetry" }
jsonrpsee = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
borsh = { workspace = true }
hex = "0.4"
hyper = "1"
tower = { workspace = true }
tower-http = { workspace = true }
vtt-consensus = { workspace = true }

[dev-dependencies]
vtt-genesis = { workspace = true }
