[package]
name = "vtt-txpool"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Transaction mempool for VTT blockchain"

[dependencies]
vtt-primitives = { workspace = true }
vtt-crypto = { workspace = true }
borsh = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
